# Vellum

./: .env.example  .gitignore  LICENSE  README.md  STYLE.md  capacitor.config.json  index.html  package.json  vite.config.js  vite.config.ts
.github/workflows/: pages.yml  release.yml
packaging/arch/: PKGBUILD  vellum.desktop
scripts/: build-linux.sh
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.js  cache.js  cover.js  http.js  native.js  nuwarm.js  router.js  store.js  updates.js
src/screens/: discover.js  library.js  reader.js  series.js  shell.js  updates.js
src/styles/: discover.css  library.css  reader.css  series.css  updates.css
