[package]
name = "vellum"
version = "0.1.0"
description = "a reading app that feels native everywhere"
authors = ["pumg"]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/fyiel/Vellum"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli"] }

# smallest desktop footprint. optimise for size, strip symbols, abort on panic
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
